--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</header>
 		<article class="first-article">
 			<section class="sect-col">
-				<h1>Maximize skill, minimize budget</h1>
+				<p id="h1">Maximize skill, minimize budget</p>
 				<p id="modern">
 					Our modern courses across a range of in-demand skills will give you
 					the knowledge you need to live the life you want.
@@ -29,53 +29,53 @@
 				<p id="para-check">Check out our most popular courses!</p>
 			</div>
 			<div class="grid-div">
-				<p id="para-b">Animation</p>
-				<p id="para-g">
+				<p class="para-b">Animation</p>
+				<p class="para-g">
 					Learn the latest animation techniques to create stunning motion design
 					and captivate your audience.
 				</p>
 				<div class="started">
-					<p id="get-s">Get Started</p>
+					<p class="get-s">Get Started</p>
 				</div>
 			</div>
 			<div class="grid-div">
-				<p id="para-b">Design</p>
-				<p id="para-g">
+				<p class="para-b">Design</p>
+				<p class="para-g">
 					Create beautiful, usable interfaces to help shape the future of how
 					the web looks.
 				</p>
 				<div class="fch">
-					<p id="get-s">Get Started</p>
+					<p class="get-s">Get Started</p>
 				</div>
 			</div>
 			<div class="grid-div">
-				<p id="para-b">Photography</p>
-				<p id="para-g">
+				<p class="para-b">Photography</p>
+				<p class="para-g">
 					Explore critical fundamentals like lighting, composition, and focus to
 					capture exceptional photos.
 				</p>
 				<div class="fch">
-					<p id="get-s">Get Started</p>
+					<p class="get-s">Get Started</p>
 				</div>
 			</div>
 			<div class="grid-div">
-				<p id="para-b">Crypto</p>
-				<p id="para-g">
+				<p class="para-b">Crypto</p>
+				<p class="para-g">
 					All you need to know to get started investing in crypto. Go from
 					beginner to advanced with this 54 hour course.
 				</p>
 				<div class="started">
-					<p id="get-s">Get Started</p>
+					<p class="get-s">Get Started</p>
 				</div>
 			</div>
 			<div class="grid-div">
-				<p id="para-b">Business</p>
-				<p id="para-g">
+				<p class="para-b">Business</p>
+				<p class="para-g">
 					A step-by-step playbook to help you start, scale, and sustain your
 					business without outside investment.
 				</p>
 				<div class="started">
-					<p id="get-s">Get Started</p>
+					<p class="get-s">Get Started</p>
 				</div>
 			</div>
 		</article>
